Make getting user key more reliable

--- a/src/templates/shared/dropdownNav.html
+++ b/src/templates/shared/dropdownNav.html
@@ -1,5 +1,5 @@
 <div class="userName navRow centered">
-    <span class="userName" data-user-key="{{UserKey}}">{{UserText}}</span>
+    <span id="userKeyElement" class="userName" data-user-key="{{UserKey}}">{{UserText}}</span>
 </div>
 
 <div class="navRow navRow-{{ShowHome}} navRow-lefted pointer noselect" onclick="MyUrls.navigateTo('/')">
@@ -18,5 +18,5 @@
 </div>
 
 <div class="navRow versionText">
-    <span>v2.6.4</span>
+    <span>v2.6.5</span>
 </div>
