--- a/src/css/adventure.css
+++ b/src/css/adventure.css
@@ -4,6 +4,7 @@
 #returnIconSection { position: fixed; top:2%; left:2%; text-align:left; }
 
 /*** SubMenu Section */
+#messageSection { padding-top:3%; }
 #rotate180deg { transform: rotateY(180deg); }
 
 /* Adventure */
@@ -74,6 +75,8 @@
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+	#messageSection { padding-top:0%; }
+
 	#returnHomeHeading { display:inline; text-align:left; }
 	#adventureDescription { width:60%; margin:auto; font-size:20px; }
 	.contentPreviewBlock .previewName { opacity:0.7; }
