--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,8 +20,8 @@
 .menuItemLeft { left:0; text-align: left; justify-content: left; }
 .menuItemRight { right:0; text-align:right; justify-content: right; }
 .menuIcons { font-size:22px; margin-left:0.5%; position:relative; transition: ease 0.5s; }
-#hamburgerMenuIcon { margin-right:2%; }
-#closeMenuIcon { color:red !important; margin-right:2%; }
+#hamburgerMenuIcon { margin-right:3%; }
+#closeMenuIcon { color:red !important; margin-right:3%; }
 
 /* Dropdown navigation */
 #dropdownNav { position:absolute; opacity:0; height:0; top:44px; left:0; right:0; width: 100%; overflow-y:hidden; z-index: 100; background-color: #D4D1CD; color: #0f0f0f; }
@@ -74,6 +74,7 @@
 @media only screen and (min-width: 768px) {
 	#menuItems { height: 40px; }
 	.menuItemLeft {  justify-content: center; }
+	#loginRequiredButton { border-radius: 20px; padding:0.5%; border:none;}
 
 	#menuSection { margin-bottom:1%; }
 	#adventureTitle { font-size: 1.5em; }
