--- a/src/templates/shared/loginRequired.html
+++ b/src/templates/shared/loginRequired.html
@@ -1,5 +1,5 @@
-<div class="centered" style="margin-top:5%;">
-    <p>Login required to view this content.</p>
+<div class="loginRequiredMessage">
+    <h2>Login required to view this content.</h2>
     <button id="loginRequiredButton" class="pointer dtk-theme-cauldron-inverse dtk-theme-cauldron-text1" href="/auth/?action=1" onclick="MyUrls.navigateTo(this.getAttribute('href'))">
         LOG IN
     </button>
