--- a/src/templates/events/noContent.html
+++ b/src/templates/events/noContent.html
@@ -1,5 +1,5 @@
 <div class="centered" style="margin-top:5%;">
-    <button id="loginRequiredButton" class="pointer dtk-theme-cauldron-inverse dtk-theme-cauldron-text1" href="/auth/?action=1" onclick="MyUrls.navigateTo(this.getAttribute('href'))">
+    <button id="loginRequiredButton" class="pointer dtk-theme-cauldron-inverse dtk-theme-cauldron-text1" onclick="MyAuth.onAuthAction('login')">
         LOG IN
     </button>
 </div>
