--- a/src/templates/shared/loginRequired.html
+++ b/src/templates/shared/loginRequired.html
@@ -1,6 +1,6 @@
 <div class="loginRequiredMessage">
     <h2>Login required to view this content.</h2>
-    <button id="loginRequiredButton" class="pointer dtk-theme-cauldron-inverse dtk-theme-cauldron-text1" href="/auth/?action=1" onclick="MyUrls.navigateTo(this.getAttribute('href'))">
+    <button id="loginRequiredButton" class="pointer dtk-theme-cauldron-inverse dtk-theme-cauldron-text1" onclick="MyAuth.onAuthAction('login')">
         LOG IN
     </button>
 </div>
