Remove old auth method

--- a/src/templates/shared/dropdownNav.html
+++ b/src/templates/shared/dropdownNav.html
@@ -12,7 +12,7 @@
     <span>Details</span>
 </div>
 
-<div class="navRow navRow-lefted pointer noselect" onclick="MyAuth.onAuthAction('{{AuthAction2}}')">
+<div class="navRow navRow-lefted pointer noselect" onclick="MyAuth.onAuthAction('{{AuthAction}}')">
     <i class="fa-solid fa-circle-user navIcon"></i>
     <span class="userText">{{AuthText}}</span>
 </div>
