--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,6 +12,7 @@
 /* Heading */
 /* .mainHeading { margin:0px; margin-top:2%; width:90%; text-align:left; } */
 #adventureTitle { font-size: 1.17em; }
+#mainTitle.fadeOnSearch { opacity:0; }
 
 /* Menu & Items */
 #menuSection { margin-bottom:5%; }
@@ -82,7 +83,6 @@
 	#dropdownNav.open .navRow { padding:5% 0%; }
 	#dropdownNav.open .navRow-lefted { text-align:left; padding-left:2%; }
 	#adventuresPanel.navOpen { display:flex !important; }
-	#mainTitle.fadeOnSearch { opacity:100 !important; }
 	#searchBarSection { padding:0.3%; }
 	#searchBarSection.active { width:15%; }
 	#hamburgerMenuIcon { margin-left:0.1%; margin-right:2%; }
