--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,7 +5,7 @@
 .loginAction { color: blue; }
 .loginAction:active { color:blue; }
 .loginAction:visited { color: blue; }
-.shareLinkSection { position:absolute; width:30%; text-align:right; font-size:90%; padding-right:1%; }
+.shareContentLinkSection { position:absolute; width:30%; text-align:right; font-size:90%; padding-right:1%; }
 #loginRequiredButton { border-radius: 20px; padding:2%; border:none;}
 .versionText { font-size:smaller; font-style: italic;}
 
@@ -15,7 +15,7 @@
 #mainTitle { opacity:0; }
 
 /* Menu & Items */
-#menuSection { margin-bottom:5%; }
+#menuSection { margin-bottom:2%; }
 #menuItems { position: relative; height:50px; }
 .menuItem { position:absolute; height:100%; width:100%; display:flex; align-items:center;  }
 .menuItemLeft { left:0; text-align: left; justify-content: left; }
