Switch to Cloudflare for adventures;

--- a/src/templates/main/adventureBlock.html
+++ b/src/templates/main/adventureBlock.html
@@ -1,7 +1,7 @@
 <div data-adventure-id="{{AdventureID}}" class="adventureBlock placeholder">
-    <span class="loadingSpinner" style="font-size:35px;"><i class="fa-solid fa-spinner dtk-spinning dtk-spinning-1000"></i></span>
+    <!-- <span class="loadingSpinner" style="font-size:35px;"><i class="fa-solid fa-spinner dtk-spinning dtk-spinning-1000"></i></span> -->
     <div class="adventureBlockImageSection showOnImageLoad">
-        <img src="{{CoverContent.Urls.thumbnail}}" alt="" onclick="onNavigateToAdventure(event)" onload="onPictureLoaded(this)"/>
+        <img src="{{Thumbnail}}" alt="" onclick="onNavigateToAdventure(event)" onload="onPictureLoaded(this)"/>
     </div>
     <h3 class="nameSection showOnImageLoad">
         <a class="adventureBlockLink dtk-href-no-textdec" href="./adventure/?id={{AdventureID}}">
